feat: add multiple signatures for SETs
